Languages/kubernetes/YAMLS/kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://engees11zadevvault.vault.azure.net/certificates/wildcard-11za-test
  name: kbdashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: kubedashboard-internal.11za.in
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kubedashboard-internal.11za.in
      secretName: keyvault-kbdashboard-ingress
